--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width"><link rel="icon" href="data:">
-<title>正岡子規の俳句オープンデータ</title>
+<title>正岡子規の俳句オープンデータ（出展：松山市）</title>
 </head><body>
-<h1>正岡子規の俳句オープンデータ</h1>
+<h1>正岡子規の俳句オープンデータ（出展：松山市）</h1>
 
 <script type="module" src="https://code4sabae.github.io/js/csv-viewer.js"></script>
 <csv-viewer src=./haiku_masaoka_shiki.csv></csv-viewer>
